@@ -91,6 +91,7 @@ extern int Android_SoftjoyEnable;
 extern int Android_Joyleft;
 extern float Android_Splitpct;
 extern int Android_Split;
+extern int Android_DerotateKeys;
 
 void Android_TouchEvent(int x1, int y1, int s1, int x2, int y2, int s2);
 void Android_KeyEvent(int k, int s);
