@@ -94,6 +94,17 @@
 		<item>11025</item>
 	</string-array>
 
+	<string-array name="derotkeys">
+		<item>@string/none</item>
+		<item>@string/left</item>
+		<item>@string/right</item>
+	</string-array>
+	<string-array name="derotkeys_values">
+		<item>0</item>
+		<item>1</item>
+		<item>2</item>
+	</string-array>
+
 	<string-array name="changes_strings">
 		<item>@string/changesv1_1a</item>
 	</string-array>
